# tool-tomanh

./: .gitignore  .gitlab-ci.yml  README.md  appveyor.yml  build_all.sh  forge.config.js  index.html  package-lock.json  package.json  utility-for-dev.sln  vite.config.js  vite.renderer.config.mjs
.github/workflows/: build.yml  release.yml
legacy/image-to-base64/: README.md  index.html  script.js  styles.css
legacy/json-to-postgresql-insert-script/: .gitignore  README.md  index.html  index.js  package-lock.json  package.json  style.css
legacy/text-to-qr/: README.md  index.html  qrcodegen.js  script.js  style.css
memory-bank/: .clinerules  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
public/_framework/: System.Private.CoreLib.wasm  System.Text.Encodings.Web.wasm  Tools.NetWrapper.wasm  blazor.boot.json  dotnet.native.wasm
public/assets/: System.Collections.Concurrent.wasm  System.Collections.wasm  System.Numerics.Tensors.wasm  System.Text.Json.wasm  dotnet.native.js.symbols
public/cfg/: config.js
public/proto/: google_auth.proto
src/: App.vue  main.js  preload.js  renderer.js
src-backend/td_tool_agent/: Cargo.toml
src-backend/td_tool_api/: Cargo.toml
src-backend/td_tool_api/src/: main.rs
src-backend/td_tool_desktop/: Cargo.toml  tauri.conf.json
src-backend/td_tool_desktop/src/: lib.rs  main.rs
src-backend/td_tool_model/: Cargo.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/assets/: Sprite.txt  main.css
src/common/: TDAppStartup.js  (+12 more)
wasm/: README.md
(+145 files in other folders)
