[package]
name = "td_tool_api"
version = "0.1.0"
edition = "2024"

[dependencies]
td_tool_agent = {path = "../td_tool_agent"}
td_tool_model={path ="../td_tool_model"}
axum = "0.8.8"
tokio ={version =  "1.48.0", features = ["full"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.148"