[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
td_tool_agent = {path= "../td_tool_agent" }
td_tool_model = {path= "../td_tool_model" }
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
